Fixed grid wrapping issue
Added flex box styles to keep grid from breaking for stuuuuuuuupid
reasons like an unexplainable .16 pixel difference in height

--- a/_includes/scss/gallery.scss
+++ b/_includes/scss/gallery.scss
@@ -2,6 +2,16 @@
   clear: both;
   margin: 1.618em 0;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  @media #{$mobile} {
+    display: block;
+  }
 }
 
 .gallery-img {
